about us, video bunner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-footer.css">
   <link rel="stylesheet" href="style-backgroundImage.css">
+  <link rel="stylesheet" href="style-header-for-video.css">
+  <link rel="stylesheet" href="style-video-bunner.css">
+  <link rel="stylesheet" href="style-about-us.css">
   <title>Zavoronok</title>
 </head>
 
@@ -23,7 +26,6 @@
   
     </div>
   </div>
-
 
   <!-- HEADER -->
   <div id="ltBlock2128608155" data-block-id="2128608155"
@@ -317,8 +319,170 @@
     </div>
   </div>
 
-  <!--FOOTER-->
+<!-- HEADER FOR VIDEO -->
+<div id="ltBlock2130094094" data-block-id="2130094094" class="lt-block lt-view bld01 lt-onecolumn lt-onecolumn-common"
+  data-code="b-ff43e">
+  <div class="lt-block-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="modal-block-content block-box col-md-8 col-md-offset-2 text-center" style="">
+          <div id="builder806422" class="builder  animated-block" data-path="items" data-animation-order="in-turn">
 
+            <div data-param="items/parts/header1" data-item-name="header1" data-title="Элемент" data-animation-mode="no"
+              style="margin-bottom: 10px; border-radius: 0px; " data-setting-editable="true"
+              class="builder-item part-header  text-center" id="a60f6f1107">
+
+              <div data-editable="true" data-param="items/parts/header1/inner/text" class="f-header f-header-64">
+                <p>Играя, дети обучаются с удовольствием!</p>
+              </div>
+
+              <div class="add-redesign-subblock" data-id="2130094094">
+                <span class="fa fa-plus"></span>
+              </div>
+            </div>
+            <style>
+              .add-redesign-subblock,
+              div#a60f6f1107 .add-redesign-subblock {
+                display: none;
+              }
+            </style>
+          </div>
+
+          <script>
+            $(function () {
+
+              if ($('#builder806422 input[type="radio"]').length == 1 && $('#builder806422 input[type="radio"]').prop('checked')) {
+                $('#builder806422 input[type="radio"]').hide();
+              }
+
+              if ($('.animated-block').animatedBlock) {
+                $('.animated-block').animatedBlock();
+              }
+            });
+          </script>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- VIDEO BUNNER -->
+<div id="ltBlock2130240031" data-block-id="2130240031" class="lt-block lt-view raw-html lt-raw lt-raw-html"
+  data-code="b-42b6a">
+  <div class="lt-block-wrapper">
+    <div id="rawHtml2101426" data-raw-editable="true" data-param="rawValue" data-mode="text/html">
+
+      <div class="video__container">
+        <video autoplay="" loop="" muted="" playsinline="" preload="auto">
+          <source
+            src="https://fs.getcourse.ru/fileservice/file/download/a/768320/sc/297/h/aaeae9f529a80e76035d2ef227ca9f92.mp4"
+            type="video/mp4">
+
+          Ваш браузер не поддерживает встроенные видео.
+        </video>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- ABOUT US -->
+<div id="ltBlock2129045428" data-block-id="2129045428" class="lt-block lt-view bld01 lt-onecolumn lt-onecolumn-common"
+  data-code="b-bd41a">
+  <div class="lt-block-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="modal-block-content block-box col-md-8 col-md-offset-2 text-left" style="">
+          <div id="builder7217271" class="builder  animated-block" data-path="items" data-animation-order="in-turn">
+
+            <div data-param="items/parts/field38336" data-item-name="field38336" data-title="Элемент"
+              data-animation-mode="no" style="margin-bottom: 25px; border-radius: 0px; " data-setting-editable="true"
+              class="builder-item part-header " id="a3174842f5">
+
+              <div data-editable="true" data-param="items/parts/field38336/inner/text" class="f-header f-header-36">
+                <p>О нас</p>
+              </div>
+
+              <div class="add-redesign-subblock" data-id="2129045428">
+                <span class="fa fa-plus"></span>
+              </div>
+            </div>
+
+            <style>
+              .add-redesign-subblock,
+              div#a3174842f5 .add-redesign-subblock {
+                display: none;
+              }
+            </style>
+
+            <div data-param="items/parts/text1" data-item-name="text1" data-title="Элемент" data-animation-mode="no"
+              style="margin-bottom: 25px; border-radius: 0px; " data-setting-editable="true"
+              class="builder-item part-text " id="aafaebc0f7">
+
+              <div style="" class="text-normal f-text" data-param="items/parts/text1/inner/text" data-editable="true">
+
+                <p>Центр детского и подросткового развития «Жаворонок» – место всестороннего развития для вашего ребенка. У нас каждый сможет выбрать что-то свое среди множества направлений. Занятия очные для детей 5–16 лет в группах до 10-ти человек. Наши ученики ходят на занятия с удовольствием!</p>
+                <p>Наши кабинеты оснащены современной техникой, у нас светлые и яркие классы и веселая игровая! Регулярно мы проводим соревнования и общие праздники для наших учеников.</p>
+
+              </div>
+
+              <div class="add-redesign-subblock" data-id="2129045428">
+                <span class="fa fa-plus"></span>
+              </div>
+            </div>
+
+            <style>
+              .add-redesign-subblock,
+              div#aafaebc0f7 .add-redesign-subblock {
+                display: none;
+              }
+            </style>
+
+            <div data-param="items/parts/field32833" data-item-name="field32833" data-title="Элемент"
+              data-animation-mode="no" style="margin-bottom: 25px; border-radius: 0px; " data-setting-editable="true"
+              class="builder-item part-text " id="a907cef556">
+              
+              <div style="" class="text-large f-text" data-param="items/parts/field32833/inner/text"
+                data-editable="true">
+                <p>Приходите - будет интересно!</p>
+              </div>
+
+              <div class="add-redesign-subblock" data-id="2129045428">
+                <span class="fa fa-plus"></span>
+              </div>
+            </div>
+
+            <style>
+              .add-redesign-subblock,
+              div#a907cef556 .add-redesign-subblock {
+                display: none;
+              }
+            </style>
+          </div>
+
+          <script>
+            $(function () {
+
+              if ($('#builder7217271 input[type="radio"]').length == 1 && $('#builder7217271 input[type="radio"]').prop('checked')) {
+                $('#builder7217271 input[type="radio"]').hide();
+              }
+
+              if ($('.animated-block').animatedBlock) {
+                $('.animated-block').animatedBlock();
+              }
+            });
+          </script>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
+  <!--FOOTER-->
   <div id="ltBlock2129044844" data-block-id="2129044844" class="lt-block lt-view raw-html lt-raw lt-raw-html"
     data-code="b-69ff8">
   
